Agregar conexion a la base de datos

--- a/AspNetCore/appsettings.json
+++ b/AspNetCore/appsettings.json
@@ -1,5 +1,7 @@
 {
-  
+  "ConnectionStrings": {
+    "CadenaSQL": "data source=JOANAMDZ24;database=dbcrudcore;user id=danielsqlserver;password=sqlserverpass;integrated security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
